Make sure featured image doesn't get too big

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -3,7 +3,7 @@
 }
 
 .featured-image {
-  width: 100%;
+  max-width: 400px;
   img {
     border-radius: 3px;
     width: 100%;
